refactor service and ctrl